Fix accordion titles on mobile.

--- a/scss/_ru_accordion.scss
+++ b/scss/_ru_accordion.scss
@@ -185,7 +185,7 @@
     
     .accordion.ru_accordion dd a.ru_accordion_titlebar .ru_accordion_title
     {
-        padding-left: 0.4rem;
+        padding-left: 1.4rem;
         position: relative;
         top: 10px;
     }
@@ -197,7 +197,7 @@
         margin-top: -4px;
         padding-left: 1rem;
         padding-right: 1rem;
-        min-width: 80px;
+        min-width: 60px;
         position: relative;
         bottom: 0px;
     }
